--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stylish Circular Stopwatch</title>
     <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
-    <div class="stopwatch">
-        <div id="display">00:00:00</div>
-        <div class="buttons">
-            <button id="startStopBtn">Start</button>
-            <button id="resetBtn">Reset</button>
+    <div class="watch">
+        <h1>Stopwatch</h1>
+        <div class="stopwatch">
+            <div id="display">00:00:00</div>
+            <div class="buttons">
+                <button id="startStopBtn">Start</button>
+                <button id="resetBtn">Reset</button>
+            </div>
         </div>
     </div>
     <script src="index.js"></script>
 </body>
+
 </html>
